--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Blue Stream micro-service template for future services",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node ./dist/index.js",
+    "build": "tsc",
+    "dev": "ts-node ./src/index.ts",
+    "start": "node ./dist/index.js",
     "test": "cross-env NODE_ENV=test mocha --recursive -r ts-node/register src/**/*.spec.ts --exit",
     "test:validation": "cross-env NODE_ENV=test mocha --recursive -r ts-node/register \"src/**/*.validator.spec.ts\" --exit",
     "test:integration": "cross-env NODE_ENV=test mocha --recursive -r ts-node/register \"src/**/*.router.spec.ts\" --exit",
@@ -53,6 +55,7 @@
     "mongoose": "^5.3.8",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "uglify-es": "^3.3.9"
   }
 }
