--- a/package.json
+++ b/package.json
@@ -51,11 +51,12 @@
     "express": "^4.16.4",
     "helmet": "^3.14.0",
     "jayson": "^2.1.1",
-    "llamajs": "^0.2.0",
     "mongoose": "^5.3.8",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "uglify-es": "^3.3.9"
+    "uglify-es": "^3.3.9",
+    "winston": "^3.2.1",
+    "winston-elasticsearch": "^0.7.9"
   }
 }
