--- a/artillery/search.yml
+++ b/artillery/search.yml
@@ -1,28 +1,25 @@
 config:
   target: 'http://localhost:3000'
   payload:
-    path: "channels.csv"
+    path: "search.csv"
     skipHeader: true
     fields:
-      - "name"
-      - "description"
-      - "user"
-      - "isProfile"
+      - "searchFilter"
   phases:
     - duration: 180
-      arrivalRate: 5
-      rampTo: 40
+      arrivalRate: 10
+      rampTo: 50
       name: "Warm up phase"
     - pause: 10
       name: "Pause phase"
-    - duration: 200
-      arrivalRate: 70
+    - duration: 300
+      arrivalRate: 50
       name: "Sustained max load phase"
   ensure:
     p99: 10
 scenarios:
   - flow:
     - get:
-        url: "/api/channel/many?name={{ name }}&description={{ description }}&user={{ user }}&isProfile={{ isProfile }}"
+        url: "/api/channel/search?searchFilter={{ searchFilter }}"
         headers:
           authorization: "bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6InVzZXJAZG8ifQ.k1sGqvw0IJ1ocB9XrF8Oviaz4D-A4E9fDkz_VmAY-LA"
